# clam

./: .gitignore  Cargo.toml  README.md
src/: autostart.rs  main.rs  power.rs  state.rs  tray.rs
wix/: License.rtf  main.wxs
